feat: refatoração completa da solução & adição do readme