@@ -3,57 +3,55 @@ package br.com.fiap.java.ArgosApi.service;
 import br.com.fiap.java.ArgosApi.dto.request.ComentarioRequestDTO;
 import br.com.fiap.java.ArgosApi.dto.response.ComentarioResponseDTO;
 import br.com.fiap.java.ArgosApi.entity.ComentarioOcorrencia;
+import br.com.fiap.java.ArgosApi.exception.ResourceNotFoundException;
 import br.com.fiap.java.ArgosApi.repository.ComentarioOcorrenciaRepository;
 import br.com.fiap.java.ArgosApi.repository.OcorrenciaRepository;
 import br.com.fiap.java.ArgosApi.repository.UsuarioRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ComentarioOcorrenciaService {
 
     private final ComentarioOcorrenciaRepository comentarioRepository;
     private final OcorrenciaRepository ocorrenciaRepository;
     private final UsuarioRepository usuarioRepository;
 
-    public ComentarioOcorrenciaService(ComentarioOcorrenciaRepository comentarioRepository,
-                                       OcorrenciaRepository ocorrenciaRepository,
-                                       UsuarioRepository usuarioRepository) {
-        this.comentarioRepository = comentarioRepository;
-        this.ocorrenciaRepository = ocorrenciaRepository;
-        this.usuarioRepository = usuarioRepository;
-    }
-
     public List<ComentarioResponseDTO> listarPorOcorrencia(UUID ocorrenciaId) {
-        return comentarioRepository.findAll().stream()
-                .filter(c -> c.getOcorrencia() != null && c.getOcorrencia().getId().equals(ocorrenciaId))
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+        ocorrenciaRepository.findById(ocorrenciaId)
+                .orElseThrow(() -> new ResourceNotFoundException("Ocorrencia nao encontrada"));
+        // FIXED: query especifica por ocorrencia em vez de findAll + filter
+        return comentarioRepository.findByOcorrenciaIdOrderByDataCriacaoAsc(ocorrenciaId)
+                .stream().map(this::toResponse).toList();
     }
 
     public ComentarioResponseDTO criar(UUID ocorrenciaId, ComentarioRequestDTO dto) {
-        var comentario = new ComentarioOcorrencia();
-        comentario.setMensagem(dto.mensagem());
-        comentario.setDataCriacao(LocalDateTime.now());
+        var ocorrencia = ocorrenciaRepository.findById(ocorrenciaId)
+                .orElseThrow(() -> new ResourceNotFoundException("Ocorrencia nao encontrada"));
 
-        ocorrenciaRepository.findById(ocorrenciaId).ifPresent(comentario::setOcorrencia);
-        usuarioRepository.findById(dto.usuarioId()).ifPresent(comentario::setUsuario);
+        var comentario = ComentarioOcorrencia.builder()
+                .mensagem(dto.mensagem())
+                .ocorrencia(ocorrencia)
+                .build();
 
-        comentario = comentarioRepository.save(comentario);
-        return toResponse(comentario);
+        // Associa usuario autenticado
+        String emailAutenticado = SecurityContextHolder.getContext().getAuthentication().getName();
+        usuarioRepository.findByEmail(emailAutenticado).ifPresent(comentario::setUsuario);
+
+        return toResponse(comentarioRepository.save(comentario));
     }
 
     private ComentarioResponseDTO toResponse(ComentarioOcorrencia c) {
         return new ComentarioResponseDTO(
-                c.getId(),
-                c.getMensagem(),
+                c.getId(), c.getMensagem(),
                 c.getUsuario() != null ? c.getUsuario().getId() : null,
+                c.getUsuario() != null ? c.getUsuario().getNome() : null,
                 c.getOcorrencia() != null ? c.getOcorrencia().getId() : null,
-                c.getDataCriacao()
-        );
+                c.getDataCriacao());
     }
 }
